# station-gui

./: .gitignore  loop.pkl  pyproject.toml  sGUI.adi  sGUI.html  sGUI.ini  sGUI.py  sGUI_MHz.txt  set_active_loop.bat  set_main.bat  station - saves tunings.py  station.py  swr.py
Antcontrol/: Antcontrol.ino  Antcontrol.kicad_sch  Antcontrol_old.kicad_sch
Antcontrol/backup/: Antcontrol - Copy.ino
PyFT8_cfg/: ALL.txt  PyFT8.adi  PyFT8.ini  PyFT8_wb.pkl  callsign_cache - Copy.pkl  callsign_cache.pkl  callsign_cache_fixer.py  heard_by_me.pkl  hearing_me.pkl  inspector.py  loop.pkl  report_times.pkl  tmp pkl to json.py
PyFT8_ptt/: IC7100.py  PyFT8_ptt.py
Rotator/: Antcontrol.kicad_sch  Rotator.ino
css/: sgui.css
js/: hearing_me.js  occ.js  sGUI.js
nec files/: Clutter file.nec  array.py  chimney generator.py  flashing generator.py
nec files/2m antennas/: 2m meander dipole.nec  Dipole by window.nec  Dipole ref.nec  Horizontal 2m Moxon.nec  Horizontal Dipole with end loading plates.nec  Owen Collinear.nec  Slot cube tall.nec  Slot cube wide.nec  Slot cube.nec  Stacked dipoles x2.nec  Stacked dipoles.nec
nec files/2m clutter/: 2m Diamond A144S5R over ground with clutter.nec  2m Diamond A144S5R over ground.nec  Circular Quad 2 ele with clutter.nec  Dipole ref with clutter.nec  Dipole ref.nec
nec files/300MHz/: Dipole linear 1 75pc.nec  Dipole with matching l = 0.25 v1.nec  Dipole with matching l = 0.25 v2.nec  Dipole with matching l = 0.33.nec  (+6 more)
sGUI/: FT8_tcvr.py  IcomCIV.py  antennas.py  comms_hub.py  cycle_manager.py  logging.py  timers.py  wsjtx_all_tailer.py
(+272 files in other folders)
