[project]
name = "PyFT8_ptt"
version = "0.0.1"
license = "GPL-3.0-or-later"

authors = [
  { name="G1OJS", email="g1ojs@yahoo.com" },
]
description = "FT8 Decoding and Encoding in Python with test/loopback code"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib",
    "pyaudio"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["ham radio", "radio", "FT8", "LDPC", "CPMFSK"]

[project.urls]
Homepage = "https://github.com/G1OJS/PyFT8_ptt"
Issues = "https://github.com/G1OJS/PyFT8_ptt/issues"

[tool.setuptools]
packages = ["PyFT8_ptt"]
license-files = ["LICENSE"]
